src/app/app.component.scss
:host {
  width: 100vw;
  height: 100vh;

  .viewer,
  .sidenav {
    top: 0;
  }

  .viewer {
    position: fixed;
    width: calc(100% - 480px);
    height: 100vh;
    left: 0;
    background: black;
  }

  .sidenav {
    position: absolute;
    width: 480px;
    min-height: 100vh;
    right: 0;
    overflow-x: hidden;
    text-align: center;
    background: white;
    overflow: hidden;

    .header,
    .content,
    .footer {
      padding: 16px;
    }

    .header {
      // TODO: on desktop only
      text-align: right;
      img {
        max-height: 64px;
      }
      p {
        margin: 0 0 1.25em 0;
      }
    }

    .content {
      min-height: 75%;
    }

    .footer {
      position: relative;
      bottom: 0;
      font-weight: 300;
      font-size: small;
    }
  }
}

:host {
  .image {
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: rgba(11, 11, 11, 1);
    height: 100%;
    position: absolute;
    z-index: 0;
    cursor: zoom-in;

    &.image-loader {
      opacity: 0;
      z-index: 2;
    }

    &.zoom {
      background-size: cover;
      cursor: zoom-out;
    }
  }

  .index {
    overflow-y: auto;
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    background: #fff;
    outline: 0;

    .header {
    }

    .list {
      margin-top: 48px;
      display: grid;
      grid-gap: 0;
      padding: 0 0.5em;

      .preview {
        &::before {
          content: "";
          padding-bottom: 100%;
          display: inline-block;
          vertical-align: top;
        }
      }
    }

    .action {
      text-align: center;
      bottom: 0;
      position: relative;

      .load-more {
      }
    }

    .footer {
    }
  }
}

@media screen and (min-width: 769px) and (max-width: 1024px) {
  :host {
    .viewer {
      width: calc(100% - 240px);
    }
    .sidenav {
      width: 240px;
    }
  }
}

@media screen and (max-width: 768px) {
  :host {
    .viewer {
      display: none;
    }
    .sidenav {
      width: 100%;
    }
  }
}

